--- a/MsWeb/Views/Home/Index.cshtml
+++ b/MsWeb/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div style="background-color:chartreuse;margin-top:50px;padding-bottom:50px;">
+    @*<div style="background-color:chartreuse;margin-top:50px;padding-bottom:50px;">
         <div class="container">
             <h1 class="text-center" style="color:purple;">我们的口号</h1>
         </div>
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <div class="container" style="color:red;">
         <h1 class="text-center">科技引领未来，应用改变现在</h1>
     </div>
