--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -12,6 +12,11 @@
             <th width="80">更新人员</th>
         </tr>
         <tr>
+            <td>2018年2月8日</td>
+            <td>增加H5小游戏，删除微信服务平台和积分平台</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
             <td>2017年11月9日</td>
             <td>增加提供的各服务简介页面</td>
             <td align="center">Lisx24</td>
