--- a/MsWeb/Views/WelfareFlash/Index.cshtml
+++ b/MsWeb/Views/WelfareFlash/Index.cshtml
@@ -2,27 +2,13 @@
     Layout = "~/Views/Shared/_WelfareFlashLayout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <script type="text/javascript" src="~/Scripts/qrcode.js"></script>
-    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-        .body-center {
-            text-align: center;
-        }
-
-        #div_center {
-            margin: 0 auto;
-        }
-    </style>
-</head>
-<body>
-    <div>
-        <h1>内容有待更新</h1>
+<div>
+    <div class="col-xs-12" style="background-color:aliceblue;text-align:left;margin-top:10px;">
+        <p class="lead"><font color="red">支付包红包免费领取。</font></p>
+        <p><font color="blue">打开支付宝，搜索9980362，即可拿到红包，支付时直接抵现，每天一次哦！</font></p>
     </div>
-</body> 
-</html>
+    <div class="col-xs-12" style="background-color:aliceblue;text-align:left;margin-top:10px;">
+        <p class="lead"><font color="red">持续更新中……</font></p>
+    </div>
+</div>
