--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -12,6 +12,11 @@
             <th width="80">更新人员</th>
         </tr>
         <tr>
+            <td>2018年6月22日</td>
+            <td>更新闪荐APP版本致1.1.3。增加移动端的福利闪达网页嵌入实现。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
             <td>2018年2月8日</td>
             <td>增加H5小游戏，删除微信服务平台和积分平台</td>
             <td align="center">Lisx24</td>
