--- a/MsWeb/Views/SharePing/SjDownload.cshtml
+++ b/MsWeb/Views/SharePing/SjDownload.cshtml
@@ -15,10 +15,19 @@
         </p>
         <p>广大买家无需注册，即可根据自己的需求进行选择领取优惠券。</p>
         <p> <a class="btn btn-default" target="_blank" href="http://www.mingshukeji.com.cn/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
-        <h4>当前版本号为：<font color="red">1.1.0</font></h4>
-        <p>2017-09-21  增加粉丝福利、发现界面，粉丝福利是专门给用户搜索粉丝福利券，发现界面目前只增加了移动网赚模块，后续会持续丰富，欢迎大家提出建议！
+        <h4>当前版本号为：<font color="red">1.1.3</font></h4>
+        <p class="lead"><font color="blue">2018-06-22</font></p>
+        <p>[修]修改界面风格及已知的BUG</p>
+        <p>[改]将登录放在主界面我的，首次不进入登录页面</p>
+        <p>[改]增加福利闪达页面</p>
+        <p>[删]删除上一版本增加的临时功能</p>
+        <p class="lead"><font color="blue">2017-11-08</font></p>
+        <p>增加软件创新服务，增加商品微信分享功能，增加双十一红包活动！增加语音识别和语音合成测试版本功能，仅管理员有权限查看。</p>
+        <p class="lead"><font color="blue">2017-09-21</font></p>
+        <p>增加粉丝福利、发现界面，粉丝福利是专门给用户搜索粉丝福利券，发现界面目前只增加了移动网赚模块，后续会持续丰富，欢迎大家提出建议！
             修复了一些BUG，美化了一些界面！</p>
-        <p>2017-09-04  首次发布，功能包含欢迎页、导航页、注册、登陆、查看商品、上传商品、审核商品、一件购买。</p>
+        <p class="lead"><font color="blue">2017-09-04</font></p>
+        <p>首次发布，功能包含欢迎页、导航页、注册、登陆、查看商品、上传商品、审核商品、一件购买。</p>
     </div>
     <div class="container">
         <div class="row">
