--- a/MsWeb/Views/SharePing/SjDownload.cshtml
+++ b/MsWeb/Views/SharePing/SjDownload.cshtml
@@ -17,10 +17,10 @@
         <p> <a class="btn btn-default" target="_blank" href="http://www.mingshukeji.com.cn/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
         <h4>当前版本号为：<font color="red">1.1.3</font></h4>
         <p class="lead"><font color="blue">2018-06-22</font></p>
-        <p>[修]修改界面风格及已知的BUG</p>
-        <p>[改]将登录放在主界面我的，首次不进入登录页面</p>
-        <p>[改]增加福利闪达页面</p>
-        <p>[删]删除上一版本增加的临时功能</p>
+        <p>[修改]修改界面风格及已知的BUG</p>
+        <p>[改修改将登录放在主界面我的，首次不进入登录页面</p>
+        <p>[增加]增加福利闪达页面</p>
+        <p>[删除]删除上一版本增加的临时功能</p>
         <p class="lead"><font color="blue">2017-11-08</font></p>
         <p>增加软件创新服务，增加商品微信分享功能，增加双十一红包活动！增加语音识别和语音合成测试版本功能，仅管理员有权限查看。</p>
         <p class="lead"><font color="blue">2017-09-21</font></p>
