--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
             <a href="http://www.mingshukeji.com.cn:81">MS博客</a>&nbsp;&nbsp;
             <a href="https://s.click.taobao.com/t?e=m%3D2%26s%3DcbSc72dVoIgcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAptAI%2B2VcbmHHHfTsOG6BL5%2FnnwDmmNqHK%2FD67FE%2B0F3%2Bw%2FcV9ExfYJ2mzPzKXazMBmIkXBqRClNTcEU%2BDykfuSM%2BhtH71aX6uIOTs4KMj3yjpOyWSRdiSZDEm2YKA6YIrbIzrZDfgWtwGXLU4WXsy8CZuZoOOkzXFxfvOyje0ynomfkDJRs%2BhU%3D">阿里云</a>&nbsp;&nbsp;
         </p>
-        <p class="foot">&nbsp;&nbsp;&nbsp;&nbsp;Copyright &copy; @DateTime.Now.Year- Mingshukeji.com.cn&nbsp;&nbsp;皖ICP备17020567号
+        <p class="foot">&nbsp;&nbsp;&nbsp;&nbsp;Copyright &copy; @DateTime.Now.Year- Mingshukeji.com.cn&nbsp;&nbsp;<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action">皖ICP备17020567号</a>
         </p>
     </footer>
     @Scripts.Render("~/bundles/jquery")
