--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -5,15 +5,20 @@
 
 <div class="container">
     <h2>网站更新日志</h2>
-    <table class="table">
+    <table class="table table-striped">
         <tr>
             <th width="128">更新时间</th>
             <th>更新日志</th>
             <th width="80">更新人员</th>
         </tr>
         <tr>
+            <td>2018年7月26日</td>
+            <td>增加小程序接口，实现获取最近三天十条推荐数据。增加阿里云短信服务接口，暂未用。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
             <td>2018年6月22日</td>
-            <td>更新闪荐APP版本致1.1.3。增加移动端的福利闪达网页嵌入实现。</td>
+            <td>更新闪荐APP版本至1.1.3。增加移动端的福利闪达网页嵌入实现。</td>
             <td align="center">Lisx24</td>
         </tr>
         <tr>
